-- added comment for binder bug
-- fixed non-paf splitter init
-- fixed splitter update calls
-- fixed boyer-moore init
-- removed content extract var cruft
-- latest from Josh
-- initial /* comments */ for text rules (needs to ignore \")
-- latest from Josh
-- added --c2x and --x2c since i'm tired of looking this stuff up!
-- added hi event squelch
-- fixed stream_ip defaults

126
-- pulled latest from tom
-- added paramaters to doc reference section
-- flow state updates
-- plug tcp session leak
-- fix paf abort to resume with atom splitter
-- delete bogus code introduced into hi paf
-- ip defrag fixes
-- refactored splitter fallback
-- fix binder.use.service
-- refactored flow state
-- latest from tom and josh 10/22 15:27
-- doc tweaks
-- fixed flow reset ordering of operations
-- changed stream to not generate rebuilt packets when the splitter doesn't
   reassemble packets (ie nhttp internal buffers)
-- added rebuilt buffers count
-- fixed partial flushes
-- fixed use of bytes copied vs actual length
-- patched force flushes to do memcpy
-- patched session clear flushed to be forced
-- fixed up --dump-defaults so that it can be validated unedited
-- fixed normalizer init of flow
-- pulled latest from Tom
-- removed force from session clear
-- updated http_server/inspect defaults
-- updated binder to bind data, session, and gadget
-- http_inspect -> http_global, http_server -> http_inspect,
   nhttp_inspect -> new_http_inspect
-- REG_TEST patches to make -A cmg look more like Snort
-- adding some FIXIT-H-J due to segfaults
-- removed REG_TEST http_server; now http_global/inspect only
-- added missing ip|tcp|udp|icmp options to checksum_drop/eval
-- pulled in latest from Josh
-- pulled in HI defaults patch from Bhagya
-- refactored inspector groups
-- moved normal_mask out of flow into inspector policy
-- patched around flow key issue with icmp ipproto vs pkt type
-- changed builtin rules to rev:1; priority:3;
-- update from Josh to fix codec FPs